finalisation soutenance revue de la disposition de mes fichier sass

--- a/Menu-css/styles-menu.css
+++ b/Menu-css/styles-menu.css
@@ -1,4 +1,32 @@
 @charset "UTF-8";
+@keyframes loader {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes visibilite {
+  from {
+    opacity: 1;
+    visibility: visible;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(2);
+  }
+}
+@keyframes delay {
+  from {
+    transform: translateY(10px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 /*--------paramettre grosse partie-----*/
 body {
   margin: 0px;
