--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -1,4 +1,5 @@
-@import "_var-mix.scss";
+@import "_mixin.scss";
+@import "_variable.scss";
 /*--------paramettre grosse partie-----*/
 body {
   margin: 0px;
