--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,4 +1,5 @@
-@import "_var-mix.scss";
+@import "_mixin.scss";
+@import "_variable.scss";
 @import "_Keyframe.scss";
 /*--------taille page/police-----*/
 body {
@@ -10,26 +11,6 @@ a {
 }
 
 /*-----loader-----*/
-@keyframes loader {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes visibilite {
-  from {
-    opacity: 1;
-    visibility: visible;
-  }
-  to {
-    opacity: 0;
-    visibility: hidden;
-    transform: scale(2);
-  }
-}
 
 .loader {
   @include flexCenterAll;
