--- a/style.css
+++ b/style.css
@@ -26,6 +26,34 @@
     opacity: 1;
   }
 }
+@keyframes loader {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes visibilite {
+  from {
+    opacity: 1;
+    visibility: visible;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(2);
+  }
+}
+@keyframes delay {
+  from {
+    transform: translateY(10px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 /*--------taille page/police-----*/
 body {
   margin: 0px;
@@ -349,18 +377,18 @@ a {
   margin-left: auto;
 }
 
-.coeurcheck input[type=checkbox],
+.coeurcheck input[type="checkbox"],
 .coeurcheck .check {
   display: none;
 }
 
-.coeurcheck input[type=checkbox]:checked ~ .check {
+.coeurcheck input[type="checkbox"]:checked ~ .check {
   display: inline-block;
   animation: loader 1.5s;
   color: rgba(255, 255, 255, 0);
 }
 
-.coeurcheck input[type=checkbox]:checked ~ .uncheck {
+.coeurcheck input[type="checkbox"]:checked ~ .uncheck {
   display: none;
 }
 
@@ -368,11 +396,6 @@ a {
   background: linear-gradient(to bottom, #9356dc, #ff79da);
   background-clip: text;
   -webkit-background-clip: text;
-}
-
-.uncheck:hover {
-  transition-duration: 0.6s;
-  transform: scale(1.2);
 }
 
 /*----fin coeur restaurant-----*/
