--- a/sass/_page/styles.scss
+++ b/sass/_page/styles.scss
@@ -1,4 +1,4 @@
+@import "../_base/base";
 @import "../_util/mixin";
 @import "../_util/variable";
-@import "../_util/Keyframe";
 @import "../_layout/general_accueil";
